Refactorings to use new DB